--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<h6>esto es un cambio</h6>h6>
+<h6>esto es un cambio</h6>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
