--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html> lang="es"
+<head>
+	<meta charset="utf-8"
+	<title>prueba</title>
+	<link rel="stylesheet" href="ccs/normalize.css">
+	</head>
 <body>
-<h1>Hello World</h1>
-<h6>esto es un cambio</h6>
+	
+	<h2>Hello World______________*****</h2>
+	
+	<h6>esto es un cambio</h6>
+	
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
